# Qt-SDL

./: .gitignore  .gitmodules  CMakeLists.txt
Qt SDL/: MainWindow.cpp  MainWindow.h  Program.cpp
lib/macos-arm64/angle/: libEGL.dylib  libabsl.dylib  libc++_chrome.dylib  libchrome_zlib.dylib
lib/macos-arm64/gl4es/: libGL.dylib
lib/macos/angle/: libEGL.dylib  libabsl.dylib  libc++_chrome.dylib  libchrome_zlib.dylib
src/: MainWindow.cpp  MainWindow.h  Program.cpp  consumer.cpp  datatransfer.cpp  datatransfer.h  eglsetup.cpp  eglsetup.h  eglsetup.mm  glescontext.cpp  glescontext.h  glesdebug.cpp  glesdebug.h  glesloader.cpp  glesloader.h  gleswidget.cpp  gleswidget.h  hemisphere.cpp  hemisphere.h  icosahedron.cpp  icosahedron.h  linegen.cpp  linegen.h  main.mm  meshline.cpp  meshline.h  producer.cpp  rendergl.h  rendergl2.cpp  rendergl2.h  rendergles2.cpp  rendergles2.h  testsource.cpp
